# rhyolite-fluids

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: lib.rs
rhyolite/src/: camera.rs  input.rs  lib.rs
rhyolite/src/geometry/: dummy.rs  marched.rs  mod.rs
rhyolite/src/renderer/: marched.rs  mod.rs  staging.rs
rhyolite/src/shaders/marched/: marched.frag
rhyolite/src/shaders/mesh/lighting/: ambient.frag
src/: camera.rs  geometry.rs  input.rs  lib.rs  lighting.rs  renderer.rs  shaders.rs  transform.rs  vk_setup.rs
src/geometry/: dummy.rs  loader.rs  marched.rs  mod.rs
src/geometry/mesh/: loader.rs  mod.rs
src/renderer/: marched.rs  mesh.rs  mod.rs  staging.rs  vulkan_setup.rs
src/shaders/: albedo.vert  deferred.vert  deferred.vs  lighting.fs  lighting.vs  mod.rs  shader.fs  shader.vs  unlit.frag
src/shaders/lighting/: ambient.frag  directional.frag  light_obj.vert  point.frag
src/shaders/marched/: marched.frag  marched.vert
src/shaders/mesh/: albedo.frag  albedo.vert  unlit.vert
src/shaders/mesh/lighting/: ambient.frag  point.frag  point.vert
