[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.18.0"
rhyolite = { path = "../rhyolite", features = ["mesh", "marched"] }
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
winit = "0.28"